add sprite font renderer

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -33,6 +33,7 @@
 	<script type='text/javascript' src="sfxr.js"> </script>
 	</head>
 	<body>
+		<img id="number_font" style="display:none" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAFAAAAAwAQMAAAC8K2+0AAAABlBMVEVjZWz///8Lm1KvAAAAAXRSTlMAQObYZgAAADtJREFUKM9jYKAR+Gj7svre9wYQczKLphPTFDBzIhLT5n31IYiCiQqKXE4T0Jmf9z6sPvShgWEU0BEAAFiaFyC53IY4AAAAAElFTkSuQmCC" />
 		<canvas width=800 height=600 id=gameCanvas oncontextmenu=event.preventDefault() tabindex=-1></canvas>
 		<p id="output" />
 		Chat: <input type="text" id="chat_input" style="width:75%">
