--- a/client/src/index.html
+++ b/client/src/index.html
@@ -37,7 +37,7 @@
 		<canvas width=800 height=600 id=gameCanvas oncontextmenu=event.preventDefault() tabindex=-1></canvas>
 		<p id="output" />
 		Chat: <input type="text" id="chat_input" style="width:75%">
-		<textarea id="chat_log" style="font-family: sans-serif;height:400px; width: 80%;border:2px solid gray;"></textarea>
+		<textarea disabled id="chat_log" style="font-family: sans-serif;height:300px; width: 80%;border:2px solid gray;"></textarea>
 
 		<script type="text/javascript" src="game.js"></script>
 		<script>
